--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -251,8 +251,8 @@
  
  ###POLAND###
  
- POL_empire_communism:0 "Polish People's Council Republic"
- POL_empire_communism_DEF:0 "the Polish People's Council Republic"
+ POL_empire_communism:0 "Polish Socialist Council Republic"
+ POL_empire_communism_DEF:0 "the Polish Socialist Council Republic"
  POL_empire_communism_ADJ:0 "Polish"
  POL_empire_democratic:0 "Greater Polish Empire"
  POL_empire_democratic_DEF:0 "the Greater Polish Empire"
@@ -264,43 +264,43 @@
  POL_empire_fascism_DEF:0 "the Greater Polish Empire"
  POL_empire_fascism_ADJ:0 "Polish"
  
- POL_rzeczpospolita_communism:0 "Polish Workers' National State"
- POL_rzeczpospolita_communism_DEF:0 "the Polish Workers' National State"
+ POL_rzeczpospolita_communism:0 "Polish People's Republic"
+ POL_rzeczpospolita_communism_DEF:0 "the Polish People's Republic"
  POL_rzeczpospolita_communism_ADJ:0 "Polish"
  POL_rzeczpospolita_democratic:0 "Republic of Poland"
  POL_rzeczpospolita_democratic_DEF:0 "the Republic of Poland"
  POL_rzeczpospolita_democratic_ADJ:0 "Polish"
- POL_rzeczpospolita_neutrality:0 "Polish State"
- POL_rzeczpospolita_neutrality_DEF:0 "the Polish State"
+ POL_rzeczpospolita_neutrality:0 "Republic of Poland"
+ POL_rzeczpospolita_neutrality_DEF:0 "the Republic of Poland"
  POL_rzeczpospolita_neutrality_ADJ:0 "Polish"
- POL_rzeczpospolita_fascism:0 "Polish State"
- POL_rzeczpospolita_fascism_DEF:0 "the Polish State"
+ POL_rzeczpospolita_fascism:0 "Republic of Poland"
+ POL_rzeczpospolita_fascism_DEF:0 "the Republic of Poland"
  POL_rzeczpospolita_fascism_ADJ:0 "Polish"
  
- POL_falanga_communism:0 "Polish Socialist Commune"
- POL_falanga_communism_DEF:0 "the Polish Socialist Commune"
+ POL_falanga_communism:0 "Polish Socialist Republic"
+ POL_falanga_communism_DEF:0 "the Polish Socialist Republic"
  POL_falanga_communism_ADJ:0 "Polish"
- POL_falanga_democratic:0 "Polish Republic"
- POL_falanga_democratic_DEF:0 "the Polish Republic"
+ POL_falanga_democratic:0 "Polish State"
+ POL_falanga_democratic_DEF:0 "the Polish State"
  POL_falanga_democratic_ADJ:0 "Polish"
- POL_falanga_neutrality:0 "Polish Falangist State"
- POL_falanga_neutrality_DEF:0 "the Polish Falangist State"
+ POL_falanga_neutrality:0 "Polish State"
+ POL_falanga_neutrality_DEF:0 "the Polish State"
  POL_falanga_neutrality_ADJ:0 "Polish"
- POL_falanga_fascism:0 "Polish Falangist State"
- POL_falanga_fascism_DEF:0 "the Polish Falangist State"
+ POL_falanga_fascism:0 "Polish State"
+ POL_falanga_fascism_DEF:0 "the Polish State"
  POL_falanga_fascism_ADJ:0 "Polish"
  
- POL_pagan_communism:0 "Polish Socialist Rodnovery Republic"
- POL_pagan_communism_DEF:0 "the Polish Socialist Rodnovery Republic"
+ POL_pagan_communism:0 "Polish Socialist Republic"
+ POL_pagan_communism_DEF:0 "the Polish Socialist Republic"
  POL_pagan_communism_ADJ:0 "Polish"
- POL_pagan_democratic:0 "Polish Rodnovery Republic"
- POL_pagan_democratic_DEF:0 "the Polish Rodnovery Republic"
+ POL_pagan_democratic:0 "Polish State"
+ POL_pagan_democratic_DEF:0 "the Polish State"
  POL_pagan_democratic_ADJ:0 "Polish"
- POL_pagan_neutrality:0 "Polish Rodnovery Kingdom"
- POL_pagan_neutrality_DEF:0 "the Polish Rodnovery Kingdom"
+ POL_pagan_neutrality:0 "Polish State"
+ POL_pagan_neutrality_DEF:0 "the Polish State"
  POL_pagan_neutrality_ADJ:0 "Polish"
- POL_pagan_fascism:0 "Polish Rodnovery Collective"
- POL_pagan_fascism_DEF:0 "the Polish Rodnovery Collective"
+ POL_pagan_fascism:0 "Polish State"
+ POL_pagan_fascism_DEF:0 "the Polish State"
  POL_pagan_fascism_ADJ:0 "Polish"
  
  POL_lechitic_communism:0 "Lechitic Union"
@@ -322,11 +322,11 @@
  POL_zapadoslavia_democratic:0 "Federal Republic of Zapadoslavia"
  POL_zapadoslavia_democratic_DEF:0 "the Federal Republic of Zapadoslavia"
  POL_zapadoslavia_democratic_ADJ:0 "Zapadoslavian"
- POL_zapadoslavia_neutrality:0 "Zapadoslavian Kingdom"
- POL_zapadoslavia_neutrality_DEF:0 "the Zapadoslavian Kingdom"
+ POL_zapadoslavia_neutrality:0 "Kingdom of Zapadoslavia"
+ POL_zapadoslavia_neutrality_DEF:0 "the Kingdom of Zapadoslavia"
  POL_zapadoslavia_neutrality_ADJ:0 "Zapadoslavian"
- POL_zapadoslavia_fascism:0 "Zapadoslavian State"
- POL_zapadoslavia_fascism_DEF:0 "the Zapadoslavian State"
+ POL_zapadoslavia_fascism:0 "Zapadoslavia"
+ POL_zapadoslavia_fascism_DEF:0 "Zapadoslavia"
  POL_zapadoslavia_fascism_ADJ:0 "Zapadoslavian"
  
  POL_slavic_communism:0 "Union of Slavic States"
@@ -342,6 +342,19 @@
  POL_slavic_fascism_DEF:0 "the Slavic Empire"
  POL_slavic_fascism_ADJ:0 "Slavic"
  
+ PAL_POL_communism:0 "Palestinian Republic"
+ PAL_POL_communism_DEF:0 "the Palestinian Republic"
+ PAL_POL_communism_ADJ:0 "Palestinian"
+ PAL_POL_democratic:0 "State of Palestine"
+ PAL_POL_democratic_DEF:0 "the State of Palestine"
+ PAL_POL_democratic_ADJ:0 "Palestinian"
+ PAL_POL_neutrality:0 "Polish State of Palestine"
+ PAL_POL_neutrality_DEF:0 "the Polish State of Palestine"
+ PAL_POL_neutrality_ADJ:0 "Palestinian"
+ PAL_POL_fascism:0 "Polish State of Palestine"
+ PAL_POL_fascism_DEF:0 "the Polish State of Palestine"
+ PAL_POL_fascism_ADJ:0 "Palestinian"
+ 
  PAL_papal_communism:0 "Jerusalem Republic"
  PAL_papal_communism_DEF:0 "Jerusalem Republic"
  PAL_papal_communism_ADJ:0 "Jerusalem"
@@ -354,19 +367,6 @@
  PAL_papal_fascism:0 "Kingdom of Jerusalem"
  PAL_papal_fascism_DEF:0 "Kingdom of Jerusalem"
  PAL_papal_fascism_ADJ:0 "Jerusalem"
- 
- PAL_polish_communism:0 "Polish Communes of Palestine"
- PAL_polish_communism_DEF:0 "the Polish Communes of Palestine"
- PAL_polish_communism_ADJ:0 "Palestinian"
- PAL_polish_democratic:0 "Polish Republic of Palestine"
- PAL_polish_democratic_DEF:0 "the Polish Republic of Palestine"
- PAL_polish_democratic_ADJ:0 "Palestinian"
- PAL_polish_neutrality:0 "Polish Mandate of Palestine"
- PAL_polish_neutrality_DEF:0 "the Polish Mandate of Palestine"
- PAL_polish_neutrality_ADJ:0 "Palestinian"
- PAL_polish_fascism:0 "Polish State of Palestine"
- PAL_polish_fascism_DEF:0 "the Polish State of Palestine"
- PAL_polish_fascism_ADJ:0 "Palestinian"
  
  ###RUSSIA###
  
