--- a/localisation/english/replace/deluge_poland_focuses_l_english.yml
+++ b/localisation/english/replace/deluge_poland_focuses_l_english.yml
@@ -25,7 +25,7 @@
  POL_start_project_in_kashubia:0 "The Project in Kashubia"
  POL_start_project_in_kashubia_desc:0 "Having regained the Kashubian lands, we faced local resistance, mainly German. But we will give them a choice: let them either return to the west to their barbaric lands, or keep quiet. We will allow those who behave well to integrate into Polish culture. In a couple of generations..."
  POL_start_project_in_germany:0 "The Project in Germany"
- POL_start_project_in_germany_desc:0 "The heart of Prussia is in our hands! Now our Government faces a difficult task to pacify these wild lands. In order to undermine the German spirit, we will take out all valuables, machines and raw materials, as well as assign their property to Polish big business."
+ POL_start_project_in_germany_desc:0 "The heart of Prussia is in our hands! Now our government faces a difficult task to pacify these wild lands. In order to undermine the German spirit, we will take out all valuables, machines and raw materials, as well as assign their property to Polish big business."
  POL_start_project_in_north_east:0 "The Project in the North-East"
  POL_start_project_in_north_east_desc:0 "There are many ethnic minorities living on our fringes with Livonia and Belarus. By teaching children in schools in their own languages, these small communities divide our people and distance themselves from the state. If they want to live in Poland, then they should be kind enough to speak Polish."
  POL_continue_project_in_lithuania:0 "The Project in Lithuania"
@@ -61,7 +61,7 @@
  POL_abolish_monarchy:0 "Abolish Monarchy"
  POL_abolish_monarchy_desc:0 "The monarchy as a form of government is clumsy and ineffective, it is obvious why it does not suit our young state. We will eliminate all monarchical and regency institutions that drag our thinking and way of life back to the past. Poland has only one ruler, and that is our glorious Marshal!"
  POL_cult_of_new_marshal:0 "Marshal's Party"
- POL_cult_of_new_marshal_desc:0 "It should be clear to everyone that the old Sanation has been reborn in our wise marshal. He is our protector and patron, who has taken upon himself the burden of leading the country to greatness, and we will honorably accompany him in this noble cause. From now on and forever: Poland is a Sanation, Sanation is a Marshal!"
+ POL_cult_of_new_marshal_desc:0 "It should be clear to everyone that the old Sanation has been reborn in our wise marshal. He is our protector and patron, who has taken upon himself the burden of leading the country to greatness, and we will honorably accompany him in this noble cause. From now on and forever: Poland is Sanation, Sanation is the Marshal!"
  POL_use_futurists:0 "Futurism"
  POL_use_futurists_desc:0 "The futurism movement has become widespread in Poland. These people find themselves striving to reflect in their works the acceleration of the pace of life and the industrialization of the milieu as signs of a new era. Based on this, we can conclude that we are not so different, let's find a common language with them."
  POL_nuz_w_bzuhu_smigly:0 "Nuż w Bżuhu"
@@ -71,7 +71,7 @@
  POL_concessions_to_christians:0 "Concessions to Christians"
  POL_concessions_to_christians_desc:0 "Perhaps we overreacted with the church reform. After all, Christianity is a conservative religion that can help keep society from falling into anarchy, and that's exactly what we need right now. So why not make some concessions?"
  
- POL_cult_of_old_marshal:0 "The Cult of the First Marshal"
+ POL_cult_of_old_marshal:0 "Cult of the First Marshal"
  POL_cult_of_old_marshal_desc:0 "Our people will never forget the First Marshal Józef Piłsudski, the great military commander and regent of the Polish state. We will perpetuate the memory of this man and preserve everything that was created by him. He will become the national symbol of the country and we will carry his name through the centuries."
  POL_mobilize_the_masses:0 "Mobilize the Masses"
  POL_mobilize_the_masses_desc:0 "The advantage of mobilization is that every person will be involved in the mechanism of the state, and our economy will find a clear goal and will not become a victim of any crisis. Thus, our power will turn into a military camp, where everyone will know their orders and not ask unnecessary questions."
@@ -170,6 +170,41 @@
  POL_incorporate_beauty_of_east_desc:0 "Adam Mickiewicz praised the beauty of the East in many poems. These lands are truly worthy of becoming part of the great Slavia. However, first they need to be protected from those who encroach on the culture itself of our big people."
  POL_the_true_messiah_arrival:0 "The Coming of the True Messiah"
  POL_the_true_messiah_arrival_desc:0 "Once we were considered political marginals, but now we have become the mainstay of all Slavs. But until now, we have not noticed the most important thing — the Messiah, about whom Adam Mickiewicz wrote for a long time, has been around all this time. Now it is clear that our Stoigniew is the same forty and four who came to protect and resurrect the state!"
+ POL_take_peoples_property_from_christians:0 "From the Church to the People"
+ POL_take_peoples_property_from_christians_desc:0 "The Catholic Church is an ulcer on the body of our country. The privileges enjoyed by this senseless institution have been earned unfairly. The property of the church and its land must be distributed among those who really deserve it — among our citizens."
+ POL_mass_propagation_of_anthropocentrism:0 "Anthropocentrism"
+ POL_mass_propagation_of_anthropocentrism_desc:0 "While others fall at the feet of their gods and kings, we are the bulwark of sanity, cleanliness and order. The Polish people are the most important people in the world, and our state consists of the Polish people, respectively, it is the most important state in the world!"
+ POL_liberate_women_from_catholic_slavery:0 "Break Women Out of Catholic Slavery"
+ POL_liberate_women_from_catholic_slavery_desc:0 "Polish women have repeatedly shown their courage, both during the battles for independence and in ordinary life. But regardless of the scale of the feat, the Catholic Church returned them to the path of bondage. Now that Catholicism has receded, it's time to give our women what everyone should be born with — the opportunity to be on an equal footing with everyone."
+ POL_repair_polish_ideomatrix:0 "Polish Ideomatrix"
+ POL_repair_polish_ideomatrix_desc:0 "The ideomatrix is everything that shapes our worldview and thinking: schools, newspapers, religion, culture and even society. The Polish ideomatrix needs a fundamental replacement: schools have stopped teaching useful and developing things, newspapers are often anti-Polish, and the current religion is used by members of the church as a tool for labeling the objectionable."
+ POL_cult_of_emilia_plater:0 "Cult of Emilia Plater"
+ POL_cult_of_emilia_plater_desc:0 "Emilia Plater is a famous Polish woman commander, revolutionary, national hero. The new generation should look up to her in all aspects, we will teach them to serve the fatherland in the same way as she did. There is nothing braver than to give your youth to serve the motherland."
+ POL_protect_people_from_backward_culture:0 "Protection Against Back Culture"
+ POL_protect_people_from_backward_culture_desc:0 "Back culture is stagnant tendencies and social apathy in society. Catholicism is anti-civilizationalism because it glorifies and encourages escapism, laziness and consumerism and, consequently, leads to material poverty and backwardness of civilization."
+ POL_replace_germanic_king:0 "The End of the German Dynasty"
+ POL_replace_germanic_king_desc:0 "The very absurdity of the situation is that we are ruled not just by a king, but by a German king. While this is going on, our rule for other countries, and most importantly for our own citizens, is more like a comedy. It's time to put an end to German history in Poland!"
+ 
+ POL_ONR_takes_over:0 "Falanga"
+ POL_ONR_takes_over_desc:0 "The indecisive actions of Sanation led to the weakening of the Polish state and attacks on the church, but now that our internal enemies have disappeared, the National Radical Camp Falanga can take full power into its own hands and announce the transformation of the existing system."
+ POL_falanga_and_monarch:0 "We and the Monarch"
+ POL_falanga_and_monarch_desc:0 "The current monarch does not support our administration. It is understandable: how else can a king whose homeland is not Poland relate to a truly Polish government? To confirm our legitimacy, we must correct this misunderstanding."
+ POL_the_third_way:0 "The Third Way"
+ POL_the_third_way_desc:0 "It is obvious that the capitalist system cannot withstand the pressure of time and collapses, however, the socialists with their radical ideology would rather drive the world into the grave than fix it. Survival is guaranteed only by balance."
+ POL_national_syndicalism:0 "National Syndicalism"
+ POL_national_syndicalism_desc:0 "The unification of nationalism and syndicalism created the philosophy of resolving the conflict between capitalism and socialism by creating a new system of economic organization based on self-governing corporations or syndicates. We are lucky that all the prerequisites for the implementation of this system have already been created in Poland."
+ POL_militarize_workers_unions:0 "Militarize Trade Unions"
+ POL_militarize_workers_unions_desc:0 "The position of trade unions should be such that, receiving various bonuses from the state, they should be ready to send their people to military service at any time. We will empower them to act as a reserve force for the army."
+ POL_delegalise_strikes:0 "Delegalise Strikes"
+ POL_delegalise_strikes_desc:0 "In times of crisis, the government considers all forms of protest, including strikes, undoubtedly organized by enemy agents, as obstacles to maintaining stability. It's time to outlaw this and bring our workers back to their place. Patriots are not on strike!"
+ POL_falangist_corporatism:0 "Falangist Corporatism"
+ POL_falangist_corporatism_desc:0 "In our country, any job is important, regardless of whether it is physical or mental. Working as one big family, trusting each other, we will build a solid system with a powerful economy. But, of course, there must be those who will monitor compliance with the requirements of the government and control the process."
+ POL_invest_in_middle_class:0 "Investing in the Middle Class"
+ POL_invest_in_middle_class_desc:0 "Raising the standard of living of the middle class — the foundation of our society — by investing in education, public services and infrastructure will help maintain public order and emphasize the authority of the current government."
+ POL_expand_war_industry:0 "Expand the War Industry"
+ POL_expand_war_industry_desc:0 "The NRC insists on expanding the military industry, paying special attention to modernization. New production lines, factories and infrastructure will not only create new jobs and stimulate investment, but also provide Poland with the military equipment necessary to confront old and new threats."
+ POL_autarky:0 "Autarky"
+ POL_autarky_desc:0 "We have reached an acceptable level of self-sufficiency. From now on, Poland does not need foreign trade and foreign influence to function properly. Of course, we will feel the blow, because independence must have its price, but our economy will rise like a phoenix and pay back in full."
  
  POL_oppose_sanation:0 "Oppose Sanation"
  POL_oppose_sanation_desc:0 "Piłsudski's militaristic regime is nothing without him. Already, a struggle for the right to be a dictator is raging among his supporters. Let's not wait for the military to arrange terror!"
@@ -290,7 +325,7 @@
  POL_support_krolewiec:0 "Money to Królewiec"
  POL_support_krolewiec_desc:0 "Królewiec has been part of the Polish state for decades and is an important link for contact with the rest of the world. We will continue to invest in this city to increase the capacity of its ports and stimulate trade."
  POL_give_free_hand_to_NBP:0 "National Bank of Poland — Autonomy"
- POL_give_free_hand_to_NBP_desc:0 "The National Bank knows better how to manage its resources. We will try to ensure that the Government's opinion is taken into account, but direct intervention will create an unnecessary burden for us."
+ POL_give_free_hand_to_NBP_desc:0 "The National Bank knows better how to manage its resources. We will try to ensure that the government's opinion is taken into account, but direct intervention will create an unnecessary burden for us."
  POL_support_gdansk:0 "Money to Gdańsk"
  POL_support_gdansk_desc:0 "Gdańsk has been a Polish city since time immemorial and now that it is part of our country again, we must rebuild its port infrastructure. The long years spent in poor Pomerania have significantly reduced its maritime potential."
  POL_support_ursus:0 "Ursus"
