--- a/localisation/russian/countries_cosmetic_l_russian.yml
+++ b/localisation/russian/countries_cosmetic_l_russian.yml
@@ -251,8 +251,8 @@
  
  ###ПОЛЬША###
  
- POL_empire_communism:0 "Польская Народная Республика"
- POL_empire_communism_DEF:0 "Польская Народная Республика"
+ POL_empire_communism:0 "Польская Социалистическая Советская Республика"
+ POL_empire_communism_DEF:0 "Польская Социалистическая Советская Республика"
  POL_empire_communism_ADJ:0 "Польск."
  POL_empire_democratic:0 "Великая Польская империя"
  POL_empire_democratic_DEF:0 "Великая Польская империя"
@@ -277,8 +277,8 @@
  POL_rzeczpospolita_fascism_DEF:0 "Польская Республика"
  POL_rzeczpospolita_fascism_ADJ:0 "Польск."
  
- POL_falanga_communism:0 "Польская Социалистическая Советская Республика"
- POL_falanga_communism_DEF:0 "Польская Социалистическая Советская Республика"
+ POL_falanga_communism:0 "Польская Социалистическая Республика"
+ POL_falanga_communism_DEF:0 "Польская Социалистическая Республика"
  POL_falanga_communism_ADJ:0 "Польск."
  POL_falanga_democratic:0 "Польское государство"
  POL_falanga_democratic_DEF:0 "Польское государство"
@@ -290,17 +290,17 @@
  POL_falanga_fascism_DEF:0 "Польское государство"
  POL_falanga_fascism_ADJ:0 "Польск."
  
- POL_pagan_communism:0 "Польская Социалистическая Советская Республика"
- POL_pagan_communism_DEF:0 "Польская Социалистическая Советская Республика"
+ POL_pagan_communism:0 "Польская Социалистическая Республика"
+ POL_pagan_communism_DEF:0 "Польская Социалистическая Республика"
  POL_pagan_communism_ADJ:0 "Польск."
- POL_pagan_democratic:0 "Польское славянское государство"
- POL_pagan_democratic_DEF:0 "Польское славянское государство"
+ POL_pagan_democratic:0 "Польское государство"
+ POL_pagan_democratic_DEF:0 "Польское государство"
  POL_pagan_democratic_ADJ:0 "Польск."
- POL_pagan_neutrality:0 "Польское славянское государство"
- POL_pagan_neutrality_DEF:0 "Польское славянское государство"
+ POL_pagan_neutrality:0 "Польское государство"
+ POL_pagan_neutrality_DEF:0 "Польское государство"
  POL_pagan_neutrality_ADJ:0 "Польск."
- POL_pagan_fascism:0 "Польское славянское государство"
- POL_pagan_fascism_DEF:0 "Польское славянское государство"
+ POL_pagan_fascism:0 "Польское государство"
+ POL_pagan_fascism_DEF:0 "Польское государство"
  POL_pagan_fascism_ADJ:0 "Польск."
  
  POL_lechitic_communism:0 "Лехитский Союз"
@@ -322,11 +322,11 @@
  POL_zapadoslavia_democratic:0 "Федеративная Республика Западославия"
  POL_zapadoslavia_democratic_DEF:0 "Федеративная Республика Западославия"
  POL_zapadoslavia_democratic_ADJ:0 "Западославск."
- POL_zapadoslavia_neutrality:0 "Западославия"
- POL_zapadoslavia_neutrality_DEF:0 "Западославия"
+ POL_zapadoslavia_neutrality:0 "Королевство Западославия"
+ POL_zapadoslavia_neutrality_DEF:0 "Королевство Западославия"
  POL_zapadoslavia_neutrality_ADJ:0 "Западославск."
- POL_zapadoslavia_fascism:0 "Западославия"
- POL_zapadoslavia_fascism_DEF:0 "Западославия"
+ POL_zapadoslavia_fascism:0 "Королевство Западославия"
+ POL_zapadoslavia_fascism_DEF:0 "Королевство Западославия"
  POL_zapadoslavia_fascism_ADJ:0 "Западославск."
  
  POL_slavic_communism:0 "Союз славянских государств"
@@ -341,6 +341,19 @@
  POL_slavic_fascism:0 "Славянская империя"
  POL_slavic_fascism_DEF:0 "Славянская империя"
  POL_slavic_fascism_ADJ:0 "Славянск."
+ 
+ PAL_POL_communism:0 "Палестинская Республика"
+ PAL_POL_communism_DEF:0 "Палестинская Республика"
+ PAL_POL_communism_ADJ:0 "Палестинск."
+ PAL_POL_democratic:0 "Государство Палестина"
+ PAL_POL_democratic_DEF:0 "Государство Палестина"
+ PAL_POL_democratic_ADJ:0 "Палестинск."
+ PAL_POL_neutrality:0 "Польское Государство Палестина"
+ PAL_POL_neutrality_DEF:0 "Польское Государство Палестина"
+ PAL_POL_neutrality_ADJ:0 "Палестинск."
+ PAL_POL_fascism:0 "Польское Государство Палестина"
+ PAL_POL_fascism_DEF:0 "Польское Государство Палестина"
+ PAL_POL_fascism_ADJ:0 "Палестинск."
  
  PAL_papal_communism:0 "Иерусалимская Республика"
  PAL_papal_communism_DEF:0 "Иерусалимская Республика"
