--- a/localisation/russian/parties_l_russian.yml
+++ b/localisation/russian/parties_l_russian.yml
@@ -88,8 +88,8 @@
  SWI_fascism_party_long:0 "Лига Зондербунд"
  HOL_communism_party:0 "Якобинская партия"
  HOL_communism_party_long:0 "Голландская партия якобинцев"
- HOL_neutrality_party:0 "Оранжевые реставраторы"
- HOL_neutrality_party_long:0 "Партия оранжевых-нассау лоялистов"
+ HOL_neutrality_party:0 "Бонапартистские лоялисты"
+ HOL_neutrality_party_long:0 "Бонапартистские лоялисты"
  HOL_democratic_party:0 "Либеральная государственная партия"
  HOL_democratic_party_long:0 "Либеральная государственная партия"
  HOL_fascism_party:0 "Отечественная партия"
@@ -642,8 +642,8 @@
  PHI_fascism_party_long:0 "Филиппинское католическое движение"
  ARG_communism_party:0 "Радикальный гражданский союз"
  ARG_communism_party_long:0 "Радикальный гражданский союз"
- ARG_neutrality_party:0 "Бонапартисты"
- ARG_neutrality_party_long:0 "Платанские бонопартисты"
+ ARG_neutrality_party:0 "Де Тунанские лоялисты"
+ ARG_neutrality_party_long:0 "Де Тунанские лоялисты"
  ARG_democratic_party:0 "Соглашение"
  ARG_democratic_party_long:0 "Соглашение"
  ARG_fascism_party:0 "Автономистское движение"
