--- a/localisation/russian/replace/deluge_poland_focuses_l_russian.yml
+++ b/localisation/russian/replace/deluge_poland_focuses_l_russian.yml
@@ -21,7 +21,7 @@
  POL_national_myth_of_hyperborea:0 "Миф о Гиперборее"
  POL_national_myth_of_hyperborea_desc:0 "Наши теоретики полагают, что где-то за Уралом, в северной Сибири, находится древняя земля Гиперборея, описанная «отцом истории» Геродотом, откуда происходит множество племен. Поляки — одни из них, и нужно убедить народ, что это правда!"
  POL_begin_oczyszczenie_project:0 "Проект «Очищение»"
- POL_begin_oczyszczenie_project_desc:0 "Наша нация заслуживает самой лучшей судьбы, но есть те, кто мешает: народы, искусственно заполонившие нашу историческую родину, не имеющие здесь корней, претендущие на польскую землю. Довольно! Пора выселить их обратно и освободить территорию, которая принадлежит нам по праву."
+ POL_begin_oczyszczenie_project_desc:0 "Наша нация заслуживает самой лучшей судьбы, но есть те, кто мешает: народы, искусственно заполонившие нашу историческую Родину, не имеющие здесь корней, претендущие на польскую землю. Довольно! Пора выселить их обратно и освободить территорию, которая принадлежит нам по праву."
  POL_start_project_in_kashubia:0 "Проект в Кашубии"
  POL_start_project_in_kashubia_desc:0 "Вернув себе кашубские земли, мы столкнулись с местным сопротивлением, в основном с немецким. Но мы дадим им выбор: пусть либо возвращаются на запад в свои варварские земли, либо помалкивают. Тем, кто будет себя хорошо вести, мы позволим интегрироваться в польскую культуру. Через пару поколений..."
  POL_start_project_in_germany:0 "Проект в Германии"
@@ -170,6 +170,41 @@
  POL_incorporate_beauty_of_east_desc:0 "Адам Мицкевич во многих поэмах воспевал красоту востока. Эти земли взаправду достойны стать частью великой Славии. Однако прежде их нужно защитить от тех, кто посягает на саму культуру нашего большого народа."
  POL_the_true_messiah_arrival:0 "Пришествие истинного мессии"
  POL_the_true_messiah_arrival_desc:0 "Когда-то нас считали политическими маргиналами, а мы теперь стали опорой всех славян. Но до сих пор мы не замечали самого главного — Мессия, о котором давно писал Адам Мицкевич, всё это время был рядом. Теперь ясно, что наш Стойгнев и есть тот самый сорок и четыре, который пришёл защитить и воскресить государство!"
+ POL_take_peoples_property_from_christians:0 "От церкви к народу"
+ POL_take_peoples_property_from_christians_desc:0 "Католическая церковь — язва на теле нашей страны. Привилегии, которыми располагает этот бессмысленный институт, были заработаны несправедливо. Собственность церкви и её землю необходимо распределить между теми, кто действительно этого заслуживает — между нашими гражданами."
+ POL_mass_propagation_of_anthropocentrism:0 "Антропоцентризм"
+ POL_mass_propagation_of_anthropocentrism_desc:0 "Пока остальные падают в ноги своим богам и королям, мы являемся оплотом здравомыслия, чистоты и порядка. Польский народ — самые важные люди в мире, а наше государство состоит из польского народа, соответственно, это самое важное государство в мире!"
+ POL_liberate_women_from_catholic_slavery:0 "Вырвать женщин из католического рабства"
+ POL_liberate_women_from_catholic_slavery_desc:0 "Польские женщины не раз проявляли своё мужество, что во время сражений за независимость, что в обычной жизни. Но независимо от масштаба подвига, католическая церковь возвращала их на путь кабалы. Теперь, когда католицизм отступил, пришла пора дать нашим женщинам то, что должно быть по праву рождения у каждого — возможность быть наравне со всеми."
+ POL_repair_polish_ideomatrix:0 "Польская матрица идей"
+ POL_repair_polish_ideomatrix_desc:0 "Матрица идей — это всё, что формирует наше мировоззрение и мышление: школы, газеты, религия, культура и даже общество. Польская матрица идей нуждается в фундаментальной замене: школы перестали учить полезному и развивающему, газеты часто антипольски настроены, а нынешняя религия используется членами церкви как инструмент для навешивания ярлыков на неугодных."
+ POL_cult_of_emilia_plater:0 "Культ Эмилии Плятер"
+ POL_cult_of_emilia_plater_desc:0 "Эмилия Плятер — знаменитая польская женщина-полководец, революционер, национальный герой. Новое поколение должно равняться на неё во всех аспектах, мы научим их служить отечеству точно так же, как это делала она. Нет ничего храбрее, чем отдать свою молодость на служение Родине."
+ POL_protect_people_from_backward_culture:0 "Защита от «обратной культуры»"
+ POL_protect_people_from_backward_culture_desc:0 "«Обратная культура» — это застойные тенденции и социальная апатия в обществе. Католицизм представляет собой антицивилизационность, поскольку он прославляет и поощряет эскапизм, лень и потребительство и, следовательно, ведёт к материальной бедности и отсталости цивилизации."
+ POL_replace_germanic_king:0 "Конец германской династии"
+ POL_replace_germanic_king_desc:0 "Сама абсурдность ситуации состоит в том, что нами правит не просто король, а король-немец. Пока это продолжается, наше правление для других стран, а главное для собственных граждан, больше похоже на комедию. Пришло время положить конец немецкой истории в Польше!"
+ 
+ POL_ONR_takes_over:0 "«Фаланга»"
+ POL_ONR_takes_over_desc:0 "Нерешительные действия Санации привели к ослаблению польского государства и нападкам на церковь, но теперь, когда наши внутренние враги исчезли, Национально-радикальный лагерь «Фаланга» может взять в свои руки всю полноту власти и объявить о преобразовании существующей системы."
+ POL_falanga_and_monarch:0 "Мы и монарх"
+ POL_falanga_and_monarch_desc:0 "Нынешний монарх не поддерживает нашу администрацию. Оно и понятно: как ещё король, родиной которого не является Польша, может относиться к по-настоящему польскому правительству? Чтобы подтвердить нашу легитимность, мы должны исправить данное недоразумение."
+ POL_the_third_way:0 "Третий путь"
+ POL_the_third_way_desc:0 "Очевидно, что капиталистическая система не выдерживает давление времени и терпит крах, однако и социалисты со своей радикальной идеологией скорее загонят мир в могилу, чем исправят его. Выживание гарантирует лишь баланс."
+ POL_national_syndicalism:0 "Национал-синдикализм"
+ POL_national_syndicalism_desc:0 "Объединение национализма и синдикализма породило философию урегулирования конфликта между капитализмом и социализмом путём создания новой системы экономической организации, основанной на самоуправляемых корпорациях или синдикатах. Нам повезло, что в Польше уже созданы все предпосылки для внедрения этой системы."
+ POL_militarize_workers_unions:0 "Милитаризировать профсоюзы"
+ POL_militarize_workers_unions_desc:0 "Позиция профессиональных союзов должна быть такова, что получая разнообразные бонусы от государства, они должны в любой момент быть готовы отдать своих людей на военную службу. Мы наделим их полномочиями выступать в качестве резервной силы для армии."
+ POL_delegalise_strikes:0 "Делегализовать забастовоки"
+ POL_delegalise_strikes_desc:0 "Во времена кризиса правительство рассматривает все формы протеста, включая забастовки, несомненно организованные вражеской агентурой, как препятствия для сохранения стабильности. Время объявить это вне закона и вернуть наших рабочих на место. Патриоты не бастуют!"
+ POL_falangist_corporatism:0 "Фалангистский корпоративизм"
+ POL_falangist_corporatism_desc:0 "В нашей стране важна любая работа, независимо от того, является ли она физической или умственной. Работая как одна большая семья, доверяя друг другу, мы выстроим прочную систему с мощной экономикой. Но, само собой, должны быть те, кто будет присматривать за соблюдением требований правительства и контролировать процесс."
+ POL_invest_in_middle_class:0 "Инвестиции в средний класс"
+ POL_invest_in_middle_class_desc:0 "Повышение уровня жизни среднего класса — основы нашего общества — путём инвестиций в образование, государственных услуг и инфраструктуры поможет поддержанию общественного порядка и подчеркнёт авторитет действующией власти."
+ POL_expand_war_industry:0 "Расширить военную промышленность"
+ POL_expand_war_industry_desc:0 "НРЛ настаивает на расширении военной промышленности, уделяя особое внимание модернизации. Новые производственные линии, фабрики и инфраструктура не только создадут новые рабочие места и простимулируют инвестиции, но и обеспечат Польшу военной техникой, необходимой для противостояния старым и новым угрозам."
+ POL_autarky:0 "Автаркия"
+ POL_autarky_desc:0 "Мы достигли приемлемого уровня самодостаточности. Отныне Польша не нуждается во внешней торговле и иностранном влиянии, чтобы нормально функционировать. Конечно, мы ощутим удар, ведь у независимости должна быть своя цена, но наша экономика восстанет как феникс и отплатит сполна."
  
  POL_oppose_sanation:0 "Противостоять Санации"
  POL_oppose_sanation_desc:0 "Милитаристский режим Пилсудского без него самого ничего из себя не представляет. Уже сейчас между его сторонниками разгорается борьба за право быть диктатором. Давайте не будем ждать, когда военщина устроит террор!"
