--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -843,17 +843,17 @@
  GER_fascism_DEF:0 "the State of the Teutonic Order"
  GER_fascism_ADJ:0 "German"
  
- WGR_communism:0 "Republic of Westphalia"
- WGR_communism_DEF:0 "the Republic of Westphalia"
+ WGR_communism:0 "Confederated States of the Rhine"
+ WGR_communism_DEF:0 "the Confederated States of the Rhine"
  WGR_communism_ADJ:0 "German"
- WGR_democratic:0 "Kingdom of Westphalia"
- WGR_democratic_DEF:0 "the Kingdom of Westphalia"
+ WGR_democratic:0 "Confederated States of the Rhine"
+ WGR_democratic_DEF:0 "the Confederated States of the Rhine"
  WGR_democratic_ADJ:0 "German"
- WGR_neutrality:0 "Kingdom of Westphalia"
- WGR_neutrality_DEF:0 "the Kingdom of Westphalia"
+ WGR_neutrality:0 "Confederated States of the Rhine"
+ WGR_neutrality_DEF:0 "the Confederated States of the Rhine"
  WGR_neutrality_ADJ:0 "German"
- WGR_fascism:0 "Kingdom of Westphalia"
- WGR_fascism_DEF:0 "the Kingdom of Westphalia"
+ WGR_fascism:0 "Confederated States of the Rhine"
+ WGR_fascism_DEF:0 "the Confederated States of the Rhine"
  WGR_fascism_ADJ:0 "German"
  
  ###ALPS###
@@ -912,8 +912,8 @@
  
  ###BALTIC###
 
- BAL_communism:0 "Baltic Socialist Republic"
- BAL_communism_DEF:0 "the Baltic Socialist Republic"
+ BAL_communism:0 "Baltic Socialist Council Republic"
+ BAL_communism_DEF:0 "the Baltic Socialist Council Republic"
  BAL_communism_ADJ:0 "Baltic"
  BAL_democratic:0 "Baltic Republic"
  BAL_democratic_DEF:0 "the Baltic Republic"
@@ -1057,8 +1057,8 @@
  BLR_fascism_DEF:0 "Belarus"
  BLR_fascism_ADJ:0 "Belarusian"
  
- UKR_communism:0 "Free Territory"
- UKR_communism_DEF:0 "the Free Territory"
+ UKR_communism:0 "Ukrainian Socialist Council Republic"
+ UKR_communism_DEF:0 "the Ukrainian Socialist Council Republic"
  UKR_communism_ADJ:0 "Ukrainian"
  UKR_democratic:0 "Ukrainian National Republic"
  UKR_democratic_DEF:0 "the Ukrainian National Republic"
