--- a/localisation/russian/countries_l_russian.yml
+++ b/localisation/russian/countries_l_russian.yml
@@ -856,17 +856,17 @@
  POM_fascism_DEF:0 "Герцогство Померания"
  POM_fascism_ADJ:0 "Померанск."
  
- WGR_communism:0 "Республика Вестфалия"
- WGR_communism_DEF:0 "Республика Вестфалия"
+ WGR_communism:0 "Конфедеративные государства Рейна"
+ WGR_communism_DEF:0 "Конфедеративные государства Рейна"
  WGR_communism_ADJ:0 "Германск."
- WGR_democratic:0 "Королевство Вестфалия"
- WGR_democratic_DEF:0 "Королевство Вестфалия"
+ WGR_democratic:0 "Конфедеративные государства Рейна"
+ WGR_democratic_DEF:0 "Конфедеративные государства Рейна"
  WGR_democratic_ADJ:0 "Германск."
- WGR_neutrality:0 "Королевство Вестфалия"
- WGR_neutrality_DEF:0 "Королевство Вестфалия"
+ WGR_neutrality:0 "Конфедеративные государства Рейна"
+ WGR_neutrality_DEF:0 "Конфедеративные государства Рейна"
  WGR_neutrality_ADJ:0 "Германск."
- WGR_fascism:0 "Королевство Вестфалия"
- WGR_fascism_DEF:0 "Королевство Вестфалия"
+ WGR_fascism:0 "Конфедеративные государства Рейна"
+ WGR_fascism_DEF:0 "Конфедеративные государства Рейна"
  WGR_fascism_ADJ:0 "Германск."
  
  ###АЛЬПЫ###
@@ -925,8 +925,8 @@
  
  ###БАЛТИЯ###
  
- BAL_communism:0 "Балтийская Социалистическая Республика"
- BAL_communism_DEF:0 "Балтийская Социалистическая Республика"
+ BAL_communism:0 "Балтийская Социалистическая Советская Республика"
+ BAL_communism_DEF:0 "Балтийская Социалистическая Советская Республика"
  BAL_communism_ADJ:0 "Балтийск."
  BAL_democratic:0 "Балтийская Республика"
  BAL_democratic_DEF:0 "Балтийская Республика"
@@ -1070,8 +1070,8 @@
  BLR_fascism_DEF:0 "Беларусь"
  BLR_fascism_ADJ:0 "Белорусск."
  
- UKR_communism:0 "Вольная территория"
- UKR_communism_DEF:0 "Вольная территория"
+ UKR_communism:0 "Украинская Социалистическая Советская Республика"
+ UKR_communism_DEF:0 "Украинская Социалистическая Советская Республика"
  UKR_communism_ADJ:0 "Украинск."
  UKR_democratic:0 "Украинская Народная Республика"
  UKR_democratic_DEF:0 "Украинская Народная Республика"
