--- a/localisation/english/deluge_decisions_l_english.yml
+++ b/localisation/english/deluge_decisions_l_english.yml
@@ -54,3 +54,4 @@
  germany_integrate_pom:0 "Integrate Pomerania"
  germany_claim_pom:0 "Claim Pomerania"
  fra_install_marie_claudette:0 "Install Marie Claudette Bonaparte in [POM.GetName]"
+ recruit_norwegian_generals:0 "Recruit Norwegian Generals"
