--- a/localisation/english/replace/deluge_poland_characters_l_english.yml
+++ b/localisation/english/replace/deluge_poland_characters_l_english.yml
@@ -116,6 +116,24 @@
  POL_deluge_michalowicz_desc:0 ""
  POL_Character_deluge_jan_woznicki:0 "Jan Woźnicki"
  POL_deluge_jan_woznicki_desc:0 ""
+ POL_Character_deluge_stanislaw_wojciechowski:0 "Stanisław Wojciechowski"
+ POL_deluge_stanislaw_wojciechowski_desc:0 ""
+ POL_Character_deluge_norbert_barlicki:0 "Norbert Barlicki"
+ POL_deluge_norbert_barlicki_desc:"0 ""
+ POL_Character_deluge_adam_ciolkosz:0 "Adam Ciołkosz"
+ POL_deluge_adam_ciolkosz_desc:0 ""
+ POL_Character_deluge_jozef_cyrankiewicz:0 "Józef Cyrankiewicz"
+ POL_deluge_jozef_cyrankiewicz_desc:0 ""
+ POL_Character_deluge_adolf_warski:0 "Adolf Warski"
+ POL_deluge_adolf_warski_desc:0 ""
+ POL_Character_deluge_alfred_lampe:0 "Alfred Lampe"
+ POL_deluge_alfred_lampe_desc:0 ""
+ POL_Character_deluge_stanislaw_radkiewicz:0 "Stanisław Radkiewicz"
+ POL_deluge_stanislaw_radkiewicz_desc:0 ""
+ POL_Character_deluge_wladyslaw_studnicki:0 "Władysław Studnicki-Gizbert"
+ POL_deluge_wladyslaw_studnicki_desc:0 ""
+ POL_Character_deluge_edward_gierek:0 "Edward Gierek"
+ POL_deluge_edward_gierek_desc:0 ""
  POL_Character_deluge_romer:0 "Tadeusz Romer"
  POL_deluge_romer_desc:0 ""
  POL_Character_deluge_zygalski:0 "Henryk Zygalski"
@@ -236,13 +254,14 @@
  POL_deluge_julian_tuwin_desc:0 ""
  POL_Character_deluge_izabella_roza_radziwillowna:0 "Izabella I"
  POL_deluge_izabella_roza_radziwillowna_desc:0 ""
+ POL_Character_deluge_andrassy_sandor:0 "Aleksander II Andrássy"
  POL_Character_deluge_augustyn_czartoryski:0 "Augustyn Józef III"
  POL_deluge_augustyn_czartoryski_desc:0 ""
- POL_Character_deluge_pawel_salwator_piast_riedelski:0 "Paweł I"
+ POL_Character_deluge_pawel_salwator_piast_riedelski:0 "Paweł Zbawca I"
  POL_deluge_pawel_salwator_piast_riedelski_desc:0 ""
  POL_Character_deluge_andrzej_walewski:0 "Andrzej I"
  POL_deluge_andrzej_walewski_desc:0 ""
- POL_Character_deluge_aleksander_tyszkiewicz:0 "Aleksander II"
+ POL_Character_deluge_aleksander_tyszkiewicz:0 "Aleksander II Tyszkiewicz"
  POL_deluge_aleksander_tyszkiewicz_desc:0 ""
  POL_Character_deluge_zygumnt_marek:0 "Zygmunt Marek"
  POL_deluge_zygumnt_marek_desc:0 ""
@@ -304,6 +323,8 @@
  POL_deluge_edward_osobka_morawski_desc:0 ""
  POL_Character_deluge_widy_wirski:0 "Feliks Widy-Wirski"
  POL_deluge_widy_wirski_desc:0 ""
+ POL_Character_deluge_feliks_dzierzynski:0 "Feliks Dzierżyński"
+ POL_deluge_feliks_dzierzynski_desc:0 ""
  POL_Character_deluge_karol_radek:0 "Karol Sobelsohn"
  POL_deluge_karol_radek_desc:0 ""
  POL_Character_deluge_artur_sliwinski:0 "Artur Śliwiński"
